modified get_parameters to write size of parameter tensors as well

--- a/python/exploratory_analysis.ipynb
+++ b/python/exploratory_analysis.ipynb
@@ -371,6 +371,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 2, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "new_tensor = np.random.randn(1, 2, 3)\n",
+    "\n",
+    "new_tensor = torch.tensor(new_tensor)\n",
+    "print(new_tensor.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
